# victors-lambdas

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/aws-lambda-powertools/: Cargo.toml
crates/aws-lambda-powertools-batch/: Cargo.toml
crates/aws-lambda-powertools-batch/src/: dynamodb.rs  failure.rs  kinesis.rs  lib.rs  processor.rs  sqs.rs
crates/aws-lambda-powertools-core/: Cargo.toml
crates/aws-lambda-powertools-core/src/: cold_start.rs  config.rs  env.rs  lib.rs  metadata.rs
crates/aws-lambda-powertools-data-masking/: Cargo.toml
crates/aws-lambda-powertools-data-masking/src/: error.rs  lib.rs  mask.rs  masking.rs  path.rs
crates/aws-lambda-powertools-event-handler/: Cargo.toml
crates/aws-lambda-powertools-event-handler/src/: alb.rs  apigateway.rs  appsync.rs  appsync_events.rs  bedrock.rs  bedrock_function.rs  compression.rs  cors.rs  http_error.rs  lambda_function_url.rs  lib.rs  method.rs  metrics.rs  request.rs  response.rs  route.rs  router.rs  trace.rs  validation.rs  vpc_lattice.rs
crates/aws-lambda-powertools-feature-flags/: Cargo.toml
crates/aws-lambda-powertools-feature-flags/src/: appconfig.rs  async_feature_flags.rs  cache.rs  config.rs  error.rs  feature_flags.rs  lib.rs
crates/aws-lambda-powertools-idempotency/: Cargo.toml
crates/aws-lambda-powertools-idempotency/src/: config.rs  error.rs  key.rs  lib.rs  payload.rs  status.rs  store.rs  workflow.rs
crates/aws-lambda-powertools-jmespath/: Cargo.toml
crates/aws-lambda-powertools-kafka/: Cargo.toml
crates/aws-lambda-powertools-kafka/src/: error.rs  lib.rs  record.rs  schema.rs
crates/aws-lambda-powertools-logger/: Cargo.toml
crates/aws-lambda-powertools-logger/src/: config.rs  entry.rs  lib.rs  logger.rs  tracing_layer.rs  value.rs
crates/aws-lambda-powertools-metadata/: Cargo.toml
crates/aws-lambda-powertools-metadata/src/: lib.rs
crates/aws-lambda-powertools-parameters/: Cargo.toml
crates/aws-lambda-powertools-parameters/src/: async_parameter.rs  cache.rs  dynamodb.rs  lib.rs  parameter.rs  provider.rs  ssm.rs  transform.rs
crates/aws-lambda-powertools-parser/: Cargo.toml
crates/aws-lambda-powertools-parser/src/: bedrock_agent.rs  cloudwatch_custom_widget.rs  cognito.rs  dynamodb.rs  envelope.rs  lib.rs  parser.rs  s3_eventbridge.rs  s3_notification.rs
crates/aws-lambda-powertools-parser/tests/: event_fixtures.rs
crates/aws-lambda-powertools-parser/tests/events/: activemq-orders.json  apigw-authorizer-http-api-v1-request.json  apigw-authorizer-simple-response.json  apigw-websocket-disconnect.json  appsync-authorizer-response.json  appsync-direct-batch-orders.json  bedrock-agent-order.json  cloudformation-bucket-policy-delete.json  cloudformation-response-success.json  cloudwatch-logs-orders.json  codedeploy-lifecycle-hook.json  cognito-custom-email-sender-signup.json  cognito-pre-signup-user.json  config-rule-evaluation.json  dynamodb-orders.json  dynamodb-stream-on-failure.json  eventbridge-order.json  firehose-sqs-orders.json  iot-core-thing-group-membership-removed.json  iot-core-thing-group-updated.json  lambda-url-order.json  rabbitmq-orders.json  s3-eventbridge-object-created.json  s3-over-sqs-order-object.json  secretsmanager-rotation-order-db.json  ses-order-email.json  sns-over-sqs-orders.json  sqs-orders.json  vpc-lattice-v1-order.json  vpc-lattice-v2-order.json
crates/aws-lambda-powertools-streaming/: Cargo.toml
crates/aws-lambda-powertools-streaming/src/: error.rs  lib.rs  s3.rs  source.rs  transform.rs
crates/aws-lambda-powertools-testing/: Cargo.toml
crates/aws-lambda-powertools-testing/src/: fixture.rs  handler.rs  lib.rs  streaming.rs
crates/aws-lambda-powertools-tracer/: Cargo.toml
crates/aws-lambda-powertools-tracer/src/: config.rs  context.rs  lib.rs  segment.rs  tracer.rs  tracing_span.rs  value.rs  xray_daemon.rs
crates/aws-lambda-powertools-validation/: Cargo.toml
crates/aws-lambda-powertools-validation/src/: envelope.rs  error.rs  lib.rs  schema.rs  validator.rs
crates/aws-lambda-powertools/src/: lib.rs
crates/victors-lambdas/: Cargo.toml
crates/victors-lambdas-batch/: Cargo.toml
crates/victors-lambdas-batch/src/: dynamodb.rs  kafka.rs  kinesis.rs  lib.rs  parser.rs  processor.rs  record.rs  response.rs  sqs.rs
crates/victors-lambdas-core/: Cargo.toml
crates/victors-lambdas-core/src/: cold_start.rs  config.rs  env.rs  lib.rs  metadata.rs
crates/victors-lambdas-data-masking/: Cargo.toml
crates/victors-lambdas-data-masking/src/: error.rs  lib.rs  path.rs  provider.rs
crates/victors-lambdas-feature-flags/: Cargo.toml
crates/victors-lambdas-feature-flags/src/: appconfig.rs  config.rs  feature_flags.rs  store.rs
crates/victors-lambdas-idempotency/: Cargo.toml
crates/victors-lambdas-idempotency/src/: cache.rs  dynamodb.rs  error.rs  key.rs  lib.rs  payload.rs  record.rs  status.rs  workflow.rs
crates/victors-lambdas-jmespath/: Cargo.toml
crates/victors-lambdas-jmespath/src/: envelope.rs  error.rs  expression.rs  lib.rs
crates/victors-lambdas-logger/: Cargo.toml
crates/victors-lambdas-logger/src/: buffer.rs  config.rs  context.rs  entry.rs  format.rs  lib.rs  logger.rs
crates/victors-lambdas-metadata/: Cargo.toml
crates/victors-lambdas-metadata/src/: lib.rs
crates/victors-lambdas-metrics/: Cargo.toml
crates/victors-lambdas-metrics/src/: config.rs  error.rs  metadata.rs  metric.rs  metrics.rs  validation.rs
crates/victors-lambdas-parameters/: Cargo.toml
crates/victors-lambdas-parameters/src/: appconfig.rs  parameter.rs  secrets.rs  ssm.rs  transform.rs
crates/victors-lambdas-testing/: Cargo.toml
crates/victors-lambdas-testing/src/: context.rs  fixture.rs  lib.rs  streaming.rs
crates/victors-lambdas-tracer/: Cargo.toml
crates/victors-lambdas-tracer/src/: config.rs  otel.rs  segment.rs  tracing_span.rs  value.rs  xray.rs  xray_daemon.rs
crates/victors-lambdas-validation/: Cargo.toml
crates/victors-lambdas-validation/src/: envelope.rs  error.rs  lib.rs  schema.rs  validator.rs
docs/: porting-plan.md  release.md
(+149 files in other folders)
