[workspace]
members = [
    "crates/*",
    "examples/basic-lambda",
    "examples/snippets/*",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT-0"
repository = "https://github.com/voctory/victors-lambdas"
homepage = "https://github.com/voctory/victors-lambdas"
readme = "README.md"
keywords = ["aws", "lambda", "serverless", "observability", "tracing"]
categories = ["development-tools", "web-programming"]

[workspace.dependencies]
victors-lambdas-core = { path = "crates/victors-lambdas-core", version = "0.1.0" }
victors-lambdas-data-masking = { path = "crates/victors-lambdas-data-masking", version = "0.1.0" }
victors-lambdas-logger = { path = "crates/victors-lambdas-logger", version = "0.1.0" }
victors-lambdas-metadata = { path = "crates/victors-lambdas-metadata", version = "0.1.0" }
victors-lambdas-metrics = { path = "crates/victors-lambdas-metrics", version = "0.1.0" }
victors-lambdas-tracer = { path = "crates/victors-lambdas-tracer", version = "0.1.0" }
victors-lambdas-parameters = { path = "crates/victors-lambdas-parameters", version = "0.1.0" }
victors-lambdas-parser = { path = "crates/victors-lambdas-parser", version = "0.1.0" }
victors-lambdas-streaming = { path = "crates/victors-lambdas-streaming", version = "0.1.0" }
victors-lambdas-batch = { path = "crates/victors-lambdas-batch", version = "0.1.0" }
victors-lambdas-idempotency = { path = "crates/victors-lambdas-idempotency", version = "0.1.0" }
victors-lambdas-validation = { path = "crates/victors-lambdas-validation", version = "0.1.0" }
victors-lambdas-event-handler = { path = "crates/victors-lambdas-event-handler", version = "0.1.0" }
victors-lambdas-feature-flags = { path = "crates/victors-lambdas-feature-flags", version = "0.1.0" }
victors-lambdas-jmespath = { path = "crates/victors-lambdas-jmespath", version = "0.1.0" }
victors-lambdas-kafka = { path = "crates/victors-lambdas-kafka", version = "0.1.0" }
victors-lambdas-testing = { path = "crates/victors-lambdas-testing", version = "0.1.0" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"

[profile.release-lambda]
inherits = "release"
codegen-units = 1
lto = "thin"
strip = "debuginfo"
