[package]
name = "aws-lambda-powertools-batch"
description = "Batch processing utility for Powertools Lambda Rust."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
aws-lambda-events = [
    "dep:aws_lambda_events",
    "aws_lambda_events/dynamodb",
    "aws_lambda_events/kinesis",
    "aws_lambda_events/sqs",
]
parser = ["dep:aws-lambda-powertools-parser"]

[dependencies]
aws-lambda-powertools-core.workspace = true
aws-lambda-powertools-parser = { workspace = true, optional = true }
aws_lambda_events = { version = "1.2.0", default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"

[lints]
workspace = true
