[package]
name = "aws-lambda-powertools-core"
description = "Shared foundations for Powertools Lambda Rust crates."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

[lints]
workspace = true

