[package]
name = "aws-lambda-powertools-event-handler"
description = "Event handler utility for Powertools Lambda Rust."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
compression = ["dep:flate2"]
aws-lambda-events = [
    "dep:aws_lambda_events",
    "dep:base64",
    "dep:http",
    "dep:serde_json",
    "aws_lambda_events/alb",
    "aws_lambda_events/apigw",
    "aws_lambda_events/appsync",
    "aws_lambda_events/bedrock_agent_runtime",
]

[dependencies]
aws-lambda-powertools-core.workspace = true
aws_lambda_events = { version = "1.2.0", default-features = false, optional = true }
base64 = { version = "0.22", optional = true }
flate2 = { version = "1.1", optional = true }
http = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
futures-executor = "0.3"

[lints]
workspace = true
