[package]
name = "aws-lambda-powertools-feature-flags"
description = "Feature flag evaluation utility for Powertools Lambda Rust."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
appconfig = ["dep:aws-lambda-powertools-parameters", "aws-lambda-powertools-parameters/appconfig"]

[dependencies]
aws-lambda-powertools-parameters = { workspace = true, optional = true }
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
futures-executor = "0.3"

[lints]
workspace = true
