[package]
name = "aws-lambda-powertools-idempotency"
description = "Idempotency utility for Powertools Lambda Rust."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10.9"

[lints]
workspace = true
