[package]
name = "aws-lambda-powertools-idempotency"
description = "Idempotency utility for Powertools Lambda Rust."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
dynamodb = ["dep:aws-sdk-dynamodb"]
jmespath = ["dep:aws-lambda-powertools-jmespath"]

[dependencies]
aws-lambda-powertools-jmespath = { workspace = true, optional = true }
aws-sdk-dynamodb = { version = "=1.82.0", optional = true }
serde = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10.9"

[dev-dependencies]
futures-executor = "0.3"

[lints]
workspace = true
