[package]
name = "aws-lambda-powertools-kafka"
description = "Kafka consumer record utility for Powertools Lambda Rust."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
aws_lambda_events = { version = "1.2.0", default-features = false, features = ["kafka"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
