[package]
name = "aws-lambda-powertools-metadata"
description = "Lambda execution environment metadata utility for Powertools Lambda Rust."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
aws-lambda-powertools-core.workspace = true
serde_json = "1.0"

[lints]
workspace = true
