[package]
name = "aws-lambda-powertools-parameters"
description = "Parameter retrieval utility for Powertools Lambda Rust."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
secrets = ["dep:aws-sdk-secretsmanager"]
ssm = ["dep:aws-sdk-ssm"]

[dependencies]
aws-sdk-secretsmanager = { version = "=1.78.0", optional = true }
aws-sdk-ssm = { version = "=1.83.0", optional = true }
base64 = "0.22"
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
futures-executor = "0.3"

[lints]
workspace = true
