[package]
name = "aws-lambda-powertools-parser"
description = "Event parsing utility for Powertools Lambda Rust."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
aws-lambda-powertools-core.workspace = true
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }

[lints]
workspace = true
