[package]
name = "aws-lambda-powertools-parser"
description = "Event parsing utility for Powertools Lambda Rust."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
aws-lambda-events = [
    "dep:aws_lambda_events",
    "dep:base64",
    "aws_lambda_events/alb",
    "aws_lambda_events/apigw",
    "aws_lambda_events/cloudwatch_logs",
    "aws_lambda_events/eventbridge",
    "aws_lambda_events/firehose",
    "aws_lambda_events/kinesis",
    "aws_lambda_events/sns",
    "aws_lambda_events/sqs",
]

[dependencies]
aws-lambda-powertools-core.workspace = true
aws_lambda_events = { version = "1.2.0", default-features = false, optional = true }
base64 = { version = "0.22", optional = true }
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }

[lints]
workspace = true
