[package]
name = "aws-lambda-powertools-parser"
description = "Event parsing utility for Powertools Lambda Rust."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
aws-lambda-events = [
    "dep:aws_lambda_events",
    "dep:base64",
    "dep:serde_dynamo",
    "aws_lambda_events/activemq",
    "aws_lambda_events/alb",
    "aws_lambda_events/apigw",
    "aws_lambda_events/appsync",
    "aws_lambda_events/autoscaling",
    "aws_lambda_events/bedrock_agent_runtime",
    "aws_lambda_events/cloudformation",
    "aws_lambda_events/cloudwatch_alarms",
    "aws_lambda_events/cloudwatch_logs",
    "aws_lambda_events/code_commit",
    "aws_lambda_events/cognito",
    "aws_lambda_events/config",
    "aws_lambda_events/dynamodb",
    "aws_lambda_events/eventbridge",
    "aws_lambda_events/firehose",
    "aws_lambda_events/kafka",
    "aws_lambda_events/kinesis",
    "aws_lambda_events/lambda_function_urls",
    "aws_lambda_events/rabbitmq",
    "aws_lambda_events/s3",
    "aws_lambda_events/secretsmanager",
    "aws_lambda_events/ses",
    "aws_lambda_events/sns",
    "aws_lambda_events/sqs",
    "aws_lambda_events/vpc_lattice",
]

[dependencies]
aws-lambda-powertools-core.workspace = true
aws_lambda_events = { version = "1.2.0", default-features = false, optional = true }
base64 = { version = "0.22", optional = true }
chrono = { version = "0.4", default-features = false, features = ["serde", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_dynamo = { version = "4.3.0", optional = true }
serde_json = "1.0"

[dev-dependencies]
aws-lambda-powertools-testing.workspace = true
serde = { version = "1.0", features = ["derive"] }

[lints]
workspace = true
