[package]
name = "aws-lambda-powertools-streaming"
description = "Seekable streaming utility for Powertools Lambda Rust."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
async = ["dep:tokio"]
csv = ["dep:csv"]
gzip = ["dep:flate2"]
s3 = ["async", "dep:aws-sdk-s3"]
zip = ["dep:zip"]

[dependencies]
aws-sdk-s3 = { version = "=1.82.0", optional = true }
csv = { version = "1.4", optional = true }
flate2 = { version = "1.1", optional = true }
tokio = { version = "1", features = ["io-util", "rt"], optional = true }
zip = { version = "4.6.1", default-features = false, features = ["deflate-flate2"], optional = true }

[dev-dependencies]
futures-executor = "0.3"

[lints]
workspace = true
