[package]
name = "aws-lambda-powertools-testing"
description = "Testing helpers for Powertools Lambda Rust."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
aws-lambda-powertools-parameters.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
