[package]
name = "aws-lambda-powertools-testing"
description = "Testing helpers for Powertools Lambda Rust."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
streaming = ["dep:aws-lambda-powertools-streaming"]

[dependencies]
aws-lambda-powertools-parameters.workspace = true
aws-lambda-powertools-streaming = { workspace = true, optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
futures-executor = "0.3"

[lints]
workspace = true
