[package]
name = "aws-lambda-powertools-validation"
description = "Validation utility for Powertools Lambda Rust."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
jsonschema = ["dep:jsonschema", "dep:serde_json"]
jmespath = [
    "jsonschema",
    "dep:aws-lambda-powertools-jmespath",
]

[dependencies]
aws-lambda-powertools-core.workspace = true
aws-lambda-powertools-jmespath = { workspace = true, optional = true }
jsonschema = { version = "0.46.5", default-features = false, optional = true }
serde_json = { version = "1.0", optional = true }

[lints]
workspace = true
