[package]
name = "aws-lambda-powertools"
description = "Unofficial Rust toolkit for AWS Lambda utilities."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
all = [
    "batch",
    "event-handler",
    "event-handler-compression",
    "event-handler-validation",
    "idempotency",
    "logger",
    "metrics",
    "parameters",
    "parser",
    "tracer",
    "validation",
]
batch = ["dep:aws-lambda-powertools-batch"]
batch-aws-lambda-events = ["batch", "aws-lambda-powertools-batch/aws-lambda-events"]
event-handler = ["dep:aws-lambda-powertools-event-handler"]
event-handler-aws-lambda-events = [
    "event-handler",
    "aws-lambda-powertools-event-handler/aws-lambda-events",
]
event-handler-compression = [
    "event-handler",
    "aws-lambda-powertools-event-handler/compression",
]
event-handler-validation = [
    "event-handler",
    "validation",
    "aws-lambda-powertools-event-handler/validation",
]
idempotency = ["dep:aws-lambda-powertools-idempotency"]
idempotency-dynamodb = ["idempotency", "aws-lambda-powertools-idempotency/dynamodb"]
logger = ["dep:aws-lambda-powertools-logger"]
logger-tracing = ["logger", "aws-lambda-powertools-logger/tracing"]
metrics = ["dep:aws-lambda-powertools-metrics"]
parameters = ["dep:aws-lambda-powertools-parameters"]
parameters-appconfig = ["parameters", "aws-lambda-powertools-parameters/appconfig"]
parameters-dynamodb = ["parameters", "aws-lambda-powertools-parameters/dynamodb"]
parameters-secrets = ["parameters", "aws-lambda-powertools-parameters/secrets"]
parameters-ssm = ["parameters", "aws-lambda-powertools-parameters/ssm"]
parser = ["dep:aws-lambda-powertools-parser"]
parser-aws-lambda-events = ["parser", "aws-lambda-powertools-parser/aws-lambda-events"]
tracer = ["dep:aws-lambda-powertools-tracer"]
tracer-tracing = ["tracer", "aws-lambda-powertools-tracer/tracing"]
validation = ["dep:aws-lambda-powertools-validation"]
validation-jsonschema = ["validation", "aws-lambda-powertools-validation/jsonschema"]

[dependencies]
aws-lambda-powertools-core.workspace = true
aws-lambda-powertools-batch = { workspace = true, optional = true }
aws-lambda-powertools-event-handler = { workspace = true, optional = true }
aws-lambda-powertools-idempotency = { workspace = true, optional = true }
aws-lambda-powertools-logger = { workspace = true, optional = true }
aws-lambda-powertools-metrics = { workspace = true, optional = true }
aws-lambda-powertools-parameters = { workspace = true, optional = true }
aws-lambda-powertools-parser = { workspace = true, optional = true }
aws-lambda-powertools-tracer = { workspace = true, optional = true }
aws-lambda-powertools-validation = { workspace = true, optional = true }

[lints]
workspace = true
