[package]
name = "victors-lambdas-batch"
description = "Batch processing utility for Victor's Lambdas."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
aws-lambda-events = [
    "dep:aws_lambda_events",
    "aws_lambda_events/dynamodb",
    "aws_lambda_events/kafka",
    "aws_lambda_events/kinesis",
    "aws_lambda_events/sqs",
]
parser = ["dep:victors-lambdas-parser", "dep:serde_dynamo"]

[dependencies]
victors-lambdas-core.workspace = true
victors-lambdas-parser = { workspace = true, optional = true }
aws_lambda_events = { version = "1.2.0", default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_dynamo = { version = "4.3.0", optional = true }

[dev-dependencies]
serde_json = "1.0"

[lints]
workspace = true
