[package]
name = "victors-lambdas-jmespath"
description = "JMESPath extraction utility for Victor's Lambdas."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
base64 = "0.22"
flate2 = "1.1"
jmespath = { package = "jmespatch", version = "0.3", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
